8368497: [lworld] redo: New lint category  for code that would not be allowed in the prologue